--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -163,7 +163,6 @@ code {
     height: 180px;
     width: 180px;
     object-fit: cover;
-    /* background: 50% 50% no-repeat; */
 }
 
 @media(max-width:1100px) {
@@ -335,7 +334,7 @@ footer {
         font-size:2rem;
     }
     .section2__description {
-        font-size: 0.8rem;;
+        font-size: 0.8rem;
     }
     .section2__link {
         font-size: 0.8rem;
@@ -362,5 +361,61 @@ footer {
     }
     .mainpage__footer_information_text{
         font-size:0.8rem;
+    }
+}
+
+@media(max-width: 440px){
+    .section1__description{
+        font-size: 0.8rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .section2 {
+        padding-left:1rem;
+    }
+    .section2__description {
+        width: 100vw;
+        font-size: 0.6rem; 
+        padding-right: 1rem;
+        line-height: 1rem;
+    }
+    .section3__leftside{
+        height:80vh;
+    }
+    .section3__leftside_heading {
+        font-size: 1rem;
+        line-height: 1.2rem;
+    }
+    .section3__leftside_description{
+        font-size: 0.6rem;
+        line-height: 1rem;
+    }
+    .section3__button{
+        padding: 0rem 1rem !important;
+    }
+    .section3__rightside{
+        height: 80vh;
+        padding-left:18px;
+        padding-top:1rem;
+    }
+    .section3__topic_item_img {
+        height: 80px;
+        width: 80px;
+        object-fit: cover;
+        margin-top:1rem;
+    }
+    .mainpage__footer_part2{
+        display:flex;
+        flex-direction: column;
+    }
+    .mainpage__footer_part2_social_media{
+        margin-top:1rem;
+        justify-content: space-between;
+        align-content: space-between
+    }
+    footer{
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 20px;
     }
 }
